--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,3 +7,4 @@
 @import url('styles/meals-section.css');
 @import url('styles/steps-section.css');
 @import url('styles/cities-section.css');
+@import url('styles/testimonials-section.css');
