added pricing plans section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,3 +8,4 @@
 @import url('styles/steps-section.css');
 @import url('styles/cities-section.css');
 @import url('styles/testimonials-section.css');
+@import url('styles/plans-section.css');
