--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,3 +9,4 @@
 @import url('styles/cities-section.css');
 @import url('styles/testimonials-section.css');
 @import url('styles/plans-section.css');
+@import url('styles/form-section.css');
