--- a/resources/css/styles/buttons.css
+++ b/resources/css/styles/buttons.css
@@ -1,6 +1,7 @@
 /* Buttons */
 .btn:link,
-.btn:visited {
+.btn:visited,
+button[type=submit] {
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
@@ -11,7 +12,8 @@
 
 
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited,
+button[type=submit] {
     background-color: #e67e22;
     border: 1px solid #e67e22;
     color: #fff;
@@ -25,12 +27,15 @@
 }
 
 .btn:hover,
-.btn:active {
+.btn:active,
+button[type=submit]:hover,
+button[type=submit]:active {
     background-color: #cf6d17;
 }
 
 .btn-full:hover,
-.btn-full:active {
+.btn-full:active,
+button[type=submit] {
     border: 1px solid #cf6d17;
     color: #fff;
 }
