Added footer. Basic layout and styling complete.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,3 +10,4 @@
 @import url('styles/testimonials-section.css');
 @import url('styles/plans-section.css');
 @import url('styles/form-section.css');
+@import url('styles/footer.css');
