--- a/resources/css/styles/testimonials-section.css
+++ b/resources/css/styles/testimonials-section.css
@@ -10,10 +10,12 @@
     color: #f2ac6e;
 }
 
+/* testimonial containers */
 .testimonial-box {
     padding: 1%;
 }
 
+/* testimonial text */
 .testimonial-box blockquote {
     color: #fff;
     padding: 2%;
@@ -23,6 +25,7 @@
     margin-top: 40px;
 }
 
+/* big double quote before testimonial */
 .testimonial-box blockquote:before {
     content: "\201C";
     font-size: 500%;
@@ -32,6 +35,7 @@
     left: -20px;
 }
 
+/* cite tag contains the author image and name */
 .testimonial-box cite {
     display: block;
     color: #f2ac6e;
