--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,7 +3,7 @@
 @import url('styles/headings.css');
 @import url('styles/buttons.css');
 @import url('styles/icons.css');
-@import url('styles/paragraphs.css');
+@import url('styles/features-section.css');
 @import url('styles/meals-section.css');
 @import url('styles/steps-section.css');
 @import url('styles/cities-section.css');
