--- a/resources/css/styles/global.css
+++ b/resources/css/styles/global.css
@@ -8,6 +8,7 @@
     box-sizing: border-box;
 }
 
+/* gets rid of outline when an element is clicked */
 *:focus {
     outline: none;
 }
@@ -43,44 +44,4 @@ html {
 
 section {
     padding: 80px 0;
-}
-
-/* Headings */
-h1, h2, h3 {
-    font-weight: 300;
-    text-transform: uppercase;
-    
-}
-
-h1 {
-    margin-top: 0;
-    margin-bottom: 20px;
-    color: #fff;
-    font-size: 2.4rem;
-    word-spacing: 4px;
-    letter-spacing: 1px;
-}
-
-h2 {
-    font-size: 1.8rem;
-    word-spacing: 2px;
-    text-align: center;
-    margin-bottom: 30px;
-    letter-spacing: 1px;
-}
-
-h2:after {
-    display: block;
-    height: 2px;
-    background-color: #e67e22;
-    content: "";
-    width: 125px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
-}
-
-h3 {
-    font-size: 1.1rem;
-    margin-bottom: 15px; 
 }
