--- a/resources/css/styles/header.css
+++ b/resources/css/styles/header.css
@@ -7,6 +7,7 @@ header {
     height: 100vh;
 }
 
+/* hero text and buttons */
 .hero-text-box {
     position: absolute;
     width: 1140px;
@@ -15,6 +16,7 @@ header {
     transform: translate(-50%, -50%);
 }
 
+/* logo */
 .logo {
     height: 100px;
     width: auto;
@@ -22,6 +24,7 @@ header {
     margin-top: 20px;
 }
 
+/* top right nav bar */
 .main-nav {
     float: right;
     list-style: none;
