--- a/resources/css/styles/meals-section.css
+++ b/resources/css/styles/meals-section.css
@@ -3,6 +3,7 @@
     padding: 0;
 }
 
+/* ul that contains figure and img elements */
 .meals-showcase {
     list-style: none;
     width: 100%;
@@ -14,6 +15,7 @@
     width: 25%;
 }
 
+/* figure element that contains img element */
 .meal-photo {
     width: 100%;
     margin: 0;
@@ -21,6 +23,8 @@
     background-color: #000;
 }
 
+/* image - black background and .7 opacity make the image dark */
+/* also the image is zoomed in slightly */
 .meal-photo img {
     opacity: 0.7;
     width: 100%;
@@ -29,6 +33,8 @@
     transition: transform 0.5s, opacity 0.5s;
 }
 
+/* image brightens and becomes normal size */
+/* 1.03 scale keeps white edge from showing */
 .meal-photo img:hover {
    transform: scale(1.03);
    opacity: 1;
