--- a/resources/css/styles/steps-section.css
+++ b/resources/css/styles/steps-section.css
@@ -2,42 +2,59 @@
 .section-steps {
     background-color: #f4f4f4;
 }
-.steps-box:first-child {
-    text-align: right;
-    padding-right: 3%;
+
+/* boxes for phone image on left, steps 1, 2, 3 on right */
+.steps-box {
     margin-top: 30px;
 }
 
+/* phone image box */
+.steps-box:first-child {
+    text-align: right;
+    padding-right: 3%;
+   }
+
+/* steps 1, 2, 3 box */
 .steps-box:last-child {
+	 text-align: left;
     padding-left: 3%;
     margin-top: 70px;
 }
 
+/* phone image */
 .app-screen {
     width: 40%;
-    height: auto;
-}
+  }
 
+/* individual steps containers */
 .works-step {
     margin-bottom: 50px;
 }
 
+/* step 3 container */
 .works-step:last-of-type {
     margin-bottom: 80px;
 }
 
+/* orange circle around the step number */
 .works-step div {
     color: #e67e22;
     border: 2px solid #e67e22;
     display: inline-block;
     border-radius: 50%;
-    height: 50px;
-    width: 50px;
+    height: 54px;
+    width: 54px;
     text-align: center;
     padding: 5px;
     float: left;
-    font-size: 1.5rem;
+    font-size: 150%;
     margin-right: 25px;
+}
+
+/* App Store and Play Store buttons */
+.btn-app:link,
+.btn-app:visited {
+    border: 0;
 }
 
 .btn-app img {
