--- a/resources/css/media-queries.css
+++ b/resources/css/media-queries.css
@@ -58,7 +58,34 @@
     }
     
     .main-nav { display: none; }
+    .mobile-nav-icon { display: inline-block; }
+    .main-nav {
+        float: left;
+        margin-top: 35px;
+        margin-left: 25px;
+    }
     
+    .main-nav li {
+        display: block;
+    }
+    
+    .main-nav li a:link,
+    .main-nav li a:visited {
+	    display: block;
+        border: 0;
+        padding: 10px 0;
+        font-size: 1rem;
+    }
+
+    .sticky .main-nav {
+          margin-top: 10px;
+    }
+
+    .sticky .main-nav li a:link,
+    .sticky .main-nav li a:visited { padding: 10px 0; }
+    .sticky .mobile-nav-icon { margin-top: 10px; }
+    .sticky .mobile-nav-icon i { color: #555; }
+
     h1 { font-size: 1.8rem; }
     h2 { font-size: 1.5rem; }
     
