--- a/resources/css/styles/header.css
+++ b/resources/css/styles/header.css
@@ -26,6 +26,8 @@ header {
     margin-top: 20px;
 }
 
+.logo-black { display: none; }
+
 /* top right nav bar */
 .main-nav {
     float: right;
@@ -53,4 +55,49 @@ header {
 .main-nav li a:hover,
 .main-nav li a:active {
     border-bottom: 2px solid #e67e22;
+}
+
+.mobile-nav-icon {
+    float: right;
+    margin-top: 30px;
+    cursor: pointer;
+    display: none;
+}
+
+.mobile-nav-icon i {
+	font-size: 2rem;
+    color: #fff;
+}
+
+/* Sticky Nav */
+
+.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.98);
+  border-bottom: 1px solid #eee;
+  box-shadow: 0 1px 2px #eee;
+  z-index: 9999;
+}
+
+.sticky .main-nav {
+      margin-top: 18px;
+}
+
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited {
+    padding-bottom: 10px;
+    color: #555;
+    }
+
+.sticky .logo { display: none; }
+
+.sticky .logo-black {
+  height: 50px;
+  width: auto;
+  float: left;
+  margin: 5px 0;
+  display: block;
 }
